--- a/scss/menu.scss
+++ b/scss/menu.scss
@@ -24,17 +24,19 @@
 	}
 }
 
-#header-menu-container {
+#header-menu-spacer {
 	position: absolute;
 	left: 10em;
 	right: 0;
 	top: 0;
 	bottom: 0;
+}
+
+#header-menu-container {
 	background: rgba(255, 255, 255, 0.75);
-	padding-right: 1em;
 	letter-spacing: 0;
-	font-size: 0;
 	text-align: right;
+	font-size: 0;
 
 	.menu {
 		height: 100%;
@@ -47,6 +49,7 @@
 		height: 100%;
 		display: inline-block;
 		text-align: right;
+		font-size: 0;
 
 		li.current-menu-item {
 			a {
